downloaded_docs/lightweight-charts/docs/4.2/api/interfaces/LayoutOptions.md
Version: 4.2

On this page

Represents layout options

## Properties[​](#properties "Direct link to Properties")

### background[​](#background "Direct link to background")

> **background**: [`Background`](/lightweight-charts/docs/4.2/api/type-aliases/Background)

Chart and scales background color.

#### Default Value[​](#default-value "Direct link to Default Value")

`{ type: ColorType.Solid, color: '#FFFFFF' }`

---

### textColor[​](#textcolor "Direct link to textColor")

> **textColor**: `string`

Color of text on the scales.

#### Default Value[​](#default-value-1 "Direct link to Default Value")

`'#191919'`

---

### fontSize[​](#fontsize "Direct link to fontSize")

> **fontSize**: `number`

Font size of text on scales in pixels.

#### Default Value[​](#default-value-2 "Direct link to Default Value")

`12`

---

### fontFamily[​](#fontfamily "Direct link to fontFamily")

> **fontFamily**: `string`

Font family of text on the scales.

#### Default Value[​](#default-value-3 "Direct link to Default Value")

`-apple-system, BlinkMacSystemFont, 'Trebuchet MS', Roboto, Ubuntu, sans-serif`

---

### attributionLogo[​](#attributionlogo "Direct link to attributionLogo")

> **attributionLogo**: `boolean`

Display the TradingView attribution logo on the main chart pane.

The licence for library specifies that you add the "attribution notice"
from the NOTICE file to your code and a link to <https://www.tradingview.com/> to
the page of your website or mobile application that is available to your users.
Using this attribution logo is sufficient for meeting this linking requirement.
However, if you already fulfill this requirement then you can disable this
attribution logo.

#### Default Value[​](#default-value-4 "Direct link to Default Value")

```prism-code
true
```